--- a/sapa-project/index.html
+++ b/sapa-project/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/sapa.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>sapa-project</title>
+    <title>Sapa NR Elections</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;800&family=Noto+Sans+Thai:wght@300;400;500;700;900&display=swap"
       rel="stylesheet"
