--- a/sapa-project/index.html
+++ b/sapa-project/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/sapa.png" />
+    <link rel="icon" type="image/svg+xml" href="https://i.postimg.cc/qRDgw6yg/sapa.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sapa NR Elections</title>
+    <title>NR Elections</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;800&family=Noto+Sans+Thai:wght@300;400;500;700;900&display=swap"
       rel="stylesheet"
