--- a/sapa-project/index.html
+++ b/sapa-project/index.html
@@ -7,6 +7,7 @@
     <title>NR Elections</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;800&family=Noto+Sans+Thai:wght@300;400;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Kanit:wght@900&display=swap"
       rel="stylesheet"
     />
   </head>
